force-app/main/default/objects/cdcpc__RD_RVIGasket_Part_Number__c/cdcpc__RD_RVIGasket_Part_Number__c.object-meta.xml
<CustomObject>
    <label>RD RVIGasketPartNumber</label>
    <nameField>
        <label>RD RVIGasketPartNumber</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD RVIGasketPartNumber</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>