force-app/main/default/objects/cdcpc__RD_RVIGasket_Part_Number__c/fields/cdcpc__Matl__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Matl__c</fullName>
    <label>Matl</label>
    <length>30</length>
    <type>Text</type>
</CustomField>