force-app/main/default/objects/cdcpc__RD_RVIGasket_Part_Number__c/fields/cdcpc__OptionCode__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__OptionCode__c</fullName>
    <label>OptionCode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>