force-app/main/default/objects/cdcpc__RD_RVIGasket_Part_Number__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__Leadtime__c</columns>
    <columns>cdcpc__Matl__c</columns>
    <columns>cdcpc__OptionCode__c</columns>
    <columns>cdcpc__PTC__c</columns>
    <columns>cdcpc__Qty_Per_Assembly__c</columns>
    <columns>cdcpc__RVIGasketPartNumber__c</columns>
    <columns>cdcpc__Scrap_Factor__c</columns>
    <columns>cdcpc__SourceCode__c</columns>
    <columns>cdcpc__SZC__c</columns>
    <columns>cdcpc__TestingCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>